# automatic_compression_platform

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
doc/: .gitignore
doc/develop/: .gitignore
doc/develop/iteration1/: diagrams.vpp  requirements.md
dummy/: CMakeLists.txt
dummy/gtest_test/: CMakeLists.txt
dummy/gtest_test/include/: addition.h  division.h
dummy/gtest_test/src/: addition.cpp  division.cpp
dummy/gtest_test/tests/: CMakeLists.txt  addition_test.h  division_test.h  test_all.cpp
dummy/protobuf_test/: .gitignore
dummy/protobuf_test/proto/: addressbook.proto
include/compression/: autocomp_compressor.hpp  automatic_compression_strategy.hpp  bzip2_compressor.hpp  compression_strategy.hpp  copy_compressor.hpp  file_processing_strategy.hpp  file_processor.hpp  fpc_compressor.hpp  leveled_compressor.hpp  lzma_compressor.hpp  lzo_compressor.hpp  pre_compressing_file_processor.hpp  round_robin_compressor.hpp  single_compressor.hpp  snappy_compressor.hpp  training_compressor.hpp  zlib_compressor.hpp
include/io/: asynchronous_buffer.hpp  directory_explorer.hpp  io_common.hpp  performance_data_writer.hpp  synchronized_file.hpp
include/monitors/: monitors.hpp
include/network/client/: client.hpp
include/network/server/: server.hpp
include/network/socket/: socket.hpp  tcp_socket.hpp
include/utils/: buffer.hpp  constants.hpp  data_structures.hpp  decision_tree.hpp  exceptions.hpp  functions.hpp  protobuf_utils.hpp  synchronous_queue.hpp  thread_pool.hpp
models/: decision_tree.txt
models/definitive/: traning_data_20180922-144622.csv
scripts/: adaptation_test.sh  bzip2.sh  fpc.sh  lzma.sh  lzo.sh  plot_adaptation_test.py  zlib.sh
src/: CMakeLists.txt
src/compression/: CMakeLists.txt  bzip2_compressor.cpp  file_processing_strategy.cpp  file_processor.cpp  fpc_compressor.cpp  lzma_compressor.cpp  lzo_compressor.cpp  pre_compressing_file_processor.cpp  round_robin_compressor.cpp  single_compressor.cpp  snappy_compressor.cpp  training_compressor.cpp  zlib_compressor.cpp
src/io/: CMakeLists.txt  asynchronous_buffer.cpp  directory_explorer.cpp  io_common.cpp  performance_data_writer.cpp  synchronized_file.cpp
src/messaging/: CMakeLists.txt  chunk_header.proto  compressor.proto  error_message.proto  file_initial_message.proto  file_request_mode.proto  file_transmission_request.proto
src/monitors/: CMakeLists.txt  monitors.cpp
src/network/: CMakeLists.txt
src/network/client/: CMakeLists.txt  client.cpp
src/network/server/: CMakeLists.txt  server.cpp
src/network/socket/: CMakeLists.txt  socket.cpp  tcp_socket.cpp
src/tools/bandwidth_measurement_comparison/: bandwidth_comparison_test.sh  bandwidth_stats.py
src/tools/bytecounting_vs_cr_test/: bytecounting_stats.py  bytecounting_vs_cr_test.sh
src/tools/classification/: best_compressor_classification.ipynb  parse_performance_data.py  retrieve_training_data.sh
src/tools/client/: CMakeLists.txt  autocomp_client.cpp
src/tools/compression_level_study/: compression_level_plots.py  compression_level_study.sh
src/tools/evaluation/: evaluate.sh  evaluate_per_data_type.sh  plot_evaluation_stats.py
src/tools/resource_modulators/: bandwidth_limiter.py  bandwidth_shaper.sh  cpu_stressor.py
src/tools/server/: CMakeLists.txt  autocomp_server.cpp
src/utils/: CMakeLists.txt  buffer.cpp  decision_tree.cpp  thread_pool.cpp
test/: CMakeLists.txt
test/compression_test/: CMakeLists.txt
test/compression_test/include/: autocomp_compressor_test.hpp  bzip2_compressor_test.hpp  file_processor_test.hpp  fpc_compressor_test.hpp  lzma_compressor_test.hpp  lzo_compressor_test.hpp  pre_compressing_file_processor_test.hpp  round_robin_compressor_test.hpp  single_compressor_test.hpp  snappy_compressor_test.hpp  training_compressor_test.hpp  zlib_compressor_test.hpp
test/compression_test/src/: compression_test.cpp
test/compressors_tests/: CMakeLists.txt
test/compressors_tests/include/: bzip2_test.hpp  fpc_test.hpp  lzma_test.hpp  lzo_test.hpp  snappy_test.hpp  zlib_test.hpp
test/compressors_tests/src/: compressors_test.cpp
test/messaging/: CMakeLists.txt
test/messaging/include/: messaging_test.hpp
test/messaging/src/: messaging_test.cpp
test/monitors/: CMakeLists.txt  cpu_monitor_test.cpp
test/network/: CMakeLists.txt
test/network/include/: client_server_test.hpp  server_test.hpp  tcp_socket_test.hpp
test/network/src/: network_test.cpp
test/test_files/test_dir/: test_file.txt  test_file2.txt  test_file3.xml
test/test_files/test_dir/test_subdir/: test_subfile.txt
test/test_files/test_dir/test_subdir2/: test_file.html
test/test_files/test_dir/test_subdir2/test_subsubdir/: test_subsubfile.txt
test/utilities/: CMakeLists.txt
test/utilities/include/: common_functions.hpp  test_constants.hpp
test/utilities/src/: common_functions.cpp
test/utils_test/: CMakeLists.txt
test/utils_test/include/: buffer_test.hpp  decision_tree_classifier.txt  decision_tree_classifier_invalid.txt  decision_tree_test.hpp  directory_explorer_test.hpp  synchronous_queue_test.hpp  thread_pool_test.hpp
test/utils_test/src/: bytecounting_test.cpp  utils_test.cpp
